# fake-connection-editor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/fake_connection_editor/: __init__.py  _launch.py  dev.py  logging_config.py
src/fake_connection_editor/core/: __init__.py  connection.py  filtering.py  ghost.py  tree.py  type_compat.py
src/fake_connection_editor/scene_access/: __init__.py  fake.py  fake_maya_backend.py  interface.py  maya.py  maya_backend.py  maya_watcher.py  real_maya_backend.py
src/fake_connection_editor/ui/: __init__.py  colors.py  connection_overlay.py  editor_window.py  errors.py  geometry.py  icons.py  interaction.py  maya_settings.py  qt_compat.py  settings.py  tree_model.py  widgets.py
src/fake_connection_editor/viewmodel/: __init__.py  editor.py  meta_store.py  scene_sync.py
tests/: conftest.py  test_c2_table.py  test_chip_filter.py  test_core.py  test_edge_cases.py  test_interaction_direction.py  test_maya_scene_access.py  test_overlay_sides.py  test_plug_ancestor.py  test_scene_access.py  test_scene_sync.py  test_ui_errors.py  test_ui_settings.py  test_viewmodel.py
tests/data/: c2_matrix.json
